force-app/main/default/objects/Account_Limitation__c/Account_Limitation__c.object-meta.xml
<CustomObject>
    <description>Limitations / Restrictions placed on an account</description>
    <label>Account Limitation</label>
    <nameField>
        <label>Limitation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Account Limitations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>