force-app/main/default/objects/Account_Limitation__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Limitations for an account</description>
    <inlineHelpText>Limitations for an account</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Account Limitations</relationshipLabel>
    <relationshipName>Account_Limitations</relationshipName>
    <type>Lookup</type>
</CustomField>