force-app/main/default/objects/Account_Limitation__c/fields/Cases_JSON__c.field-meta.xml
<CustomField>
    <fullName>Cases_JSON__c</fullName>
    <label>Cases JSON</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>