force-app/main/default/objects/Account_Limitation__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <description>Category of the limitations on the customer account.</description>
    <inlineHelpText>Category of the limitations on the customer account.</inlineHelpText>
    <label>Category</label>
    <length>128</length>
    <type>Text</type>
</CustomField>