force-app/main/default/objects/Account_Limitation__c/fields/Level__c.field-meta.xml
<CustomField>
    <fullName>Level__c</fullName>
    <description>Level of the limitations on the customer account e.g. 1,2 etc.</description>
    <inlineHelpText>Level of the limitations on the customer account e.g. 1,2 etc.</inlineHelpText>
    <label>Level</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>