force-app/main/default/objects/Account_Limitation__c/fields/Limitation_Id__c.field-meta.xml
<CustomField>
    <fullName>Limitation_Id__c</fullName>
    <description>Unique identifier for this limitation in system of record</description>
    <inlineHelpText>Unique identifier for this limitation in system of record</inlineHelpText>
    <label>Limitation Id</label>
    <length>64</length>
    <type>Text</type>
</CustomField>