force-app/main/default/objects/Account_Limitation__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Current status of the limitation</description>
    <inlineHelpText>Current status of the limitation</inlineHelpText>
    <label>Status</label>
    <length>128</length>
    <type>Text</type>
</CustomField>