force-app/main/default/objects/Account_Limitation__c/fields/Subtypes_JSON__c.field-meta.xml
<CustomField>
    <fullName>Subtypes_JSON__c</fullName>
    <label>Subtypes_JSON</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>