force-app/main/default/objects/Account_Limitation__c/fields/Time_Created__c.field-meta.xml
<CustomField>
    <fullName>Time_Created__c</fullName>
    <label>Time Created</label>
    <type>DateTime</type>
</CustomField>